# fastapi-postgress

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml
fastapi_postgres/: app.py  config.py
fastapi_postgres/api/: models.py
fastapi_postgres/api/v1/: routes.py
fastapi_postgres/api/v2/: dependencies.py  routes.py
fastapi_postgres/database/: models.py  repository.py  session.py
scripts/: migrate.py  run.sh
tests/: conftest.py
